--- a/register.html
+++ b/register.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Register | Investment App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="css/style.css">
+<title>Register</title>
 </head>
 <body>
 
-<div class="container">
-  <h2>Create Account</h2>
+<h2>Register</h2>
 
-  <input type="text" id="username" placeholder="Username">
-  <input type="email" id="email" placeholder="Email">
-  <input type="password" id="password" placeholder="Password">
+<input id="email" placeholder="Email">
+<input id="password" type="password" placeholder="Password">
+<button onclick="register()">Register</button>
 
-  <button onclick="register()">Register</button>
-
-  <p class="link">
-    Already have an account?
-    <a href="index.html">Login</a>
-  </p>
-</div>
-
-<script type="module" src="js/firebase.js"></script>
 <script type="module" src="js/auth.js"></script>
 </body>
 </html>
