--- a/register.html
+++ b/register.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="css/style.css">
-<title>Register</title>
+  <title>Register</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -11,8 +10,10 @@
 
 <input id="email" placeholder="Email">
 <input id="password" type="password" placeholder="Password">
-<button onclick="register()">Register</button>
+<button onclick="register()">Create Account</button>
 
-<script type="module" src="js/auth.js"></script>
+<p><a href="index.html">Login</a></p>
+
+<script type="module" src="auth.js"></script>
 </body>
 </html>
