--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="css/style.css">
-<title>Login</title>
+  <title>Login</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -15,6 +14,6 @@
 
 <p><a href="register.html">Create account</a></p>
 
-<script type="module" src="js/auth.js"></script>
+<script type="module" src="auth.js"></script>
 </body>
 </html>
