--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <title>Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+
+  <!-- CSS folder path -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -23,8 +25,8 @@
 
   </div>
 
-  <!-- MUST be here -->
-  <script type="module" src="auth.js"></script>
+  <!-- JS folder path -->
+  <script type="module" src="js/auth.js"></script>
 
 </body>
 </html>
