--- a/dashboard.html
+++ b/dashboard.html
@@ -16,6 +16,6 @@
   <a href="profile.html">Profile</a>
 </nav>
 
-<script type="module" src="dashboard.js"></script>
+<script type="module" src="js/dashboard.js"></script>
 </body>
 </html>
