--- a/deposit.html
+++ b/deposit.html
@@ -15,4 +15,4 @@ KULIYAPITIYA
 <input id="amount" placeholder="Amount">
 <button onclick="sendDeposit()">Submit</button>
 
-<script type="module" src="deposit.js"></script>
+<script type="module" src="js/deposit.js"></script>
