--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,4 @@
 <h2>Profile</h2>
 <div id="info"></div>
 
-<script type="module" src="profile.js"></script>
+<script type="module" src="js/profile.js"></script>
