--- a/withdraw.html
+++ b/withdraw.html
@@ -3,4 +3,4 @@
 <input id="amount" placeholder="Amount">
 <button onclick="sendWithdraw()">Submit</button>
 
-<script type="module" src="withdraw.js"></script>
+<script type="module" src="js/withdraw.js"></script>
