--- a/dashboard.html
+++ b/dashboard.html
@@ -6,20 +6,26 @@
 </head>
 <body>
 
-<div class="dash-header">
-  <h2>Dashboard</h2>
+<!-- HEADER -->
+<div class="top-title">
+  <h1>CHUTTA INVESTMENT PLAN</h1>
+  <p>Sri Lanka 🇱🇰</p>
 </div>
 
-<div class="balance-card">
-  <p>Total Balance</p>
-  <h1>LKR <span id="balance">0</span></h1>
+<!-- BALANCE CARD -->
+<div class="balance-wrapper">
+  <div class="balance-card">
+    <span>Total Balance</span>
+    <h2>LKR <span id="balance">0</span></h2>
+  </div>
 </div>
 
-<div class="action-grid">
-  <a href="deposit.html" class="btn deposit">💰 Deposit</a>
-  <a href="withdraw.html" class="btn withdraw">🏦 Withdraw</a>
-  <a href="plans.html" class="btn plans">📊 Plans</a>
-  <a href="profile.html" class="btn profile">👤 Profile</a>
+<!-- BOTTOM NAV -->
+<div class="bottom-nav">
+  <a href="deposit.html">💰<br>Deposit</a>
+  <a href="withdraw.html">🏦<br>Withdraw</a>
+  <a href="plans.html">📊<br>Plans</a>
+  <a href="profile.html">👤<br>Profile</a>
 </div>
 
 <script type="module" src="js/dashboard.js"></script>
