--- a/dashboard.html
+++ b/dashboard.html
@@ -1,33 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Dashboard</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-<!-- HEADER -->
 <div class="top-title">
   <h1>CHUTTA INVESTMENT PLAN</h1>
   <p>Sri Lanka 🇱🇰</p>
 </div>
 
-<!-- BALANCE CARD -->
 <div class="balance-wrapper">
   <div class="balance-card">
     <span>Total Balance</span>
-    <h2>LKR <span id="balance">0</span></h2>
+    <h2>LKR 0</h2>
   </div>
 </div>
 
-<!-- BOTTOM NAV -->
 <div class="bottom-nav">
-  <a href="deposit.html">💰<br>Deposit</a>
-  <a href="withdraw.html">🏦<br>Withdraw</a>
-  <a href="plans.html">📊<br>Plans</a>
-  <a href="profile.html">👤<br>Profile</a>
+  <a href="#"><span>💰</span>Deposit</a>
+  <a href="#"><span>💸</span>Withdraw</a>
+  <a href="#"><span>📊</span>Plans</a>
+  <a href="#"><span>👤</span>Profile</a>
 </div>
-
-<script type="module" src="js/dashboard.js"></script>
-</body>
-</html>
