--- a/dashboard.html
+++ b/dashboard.html
@@ -1,18 +1,32 @@
-<div class="top-title">
-  <h1>CHUTTA INVESTMENT PLAN</h1>
-  <p>Sri Lanka 🇱🇰</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Dashboard</title>
 
-<div class="balance-wrapper">
-  <div class="balance-card">
-    <span>Total Balance</span>
-    <h2>LKR 0</h2>
+  <!-- CSS LINK -->
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <div class="top-title">
+    <h1>CHUTTA INVESTMENT PLAN</h1>
+    <p>Sri Lanka 🇱🇰</p>
   </div>
-</div>
 
-<div class="bottom-nav">
-  <a href="#"><span>💰</span>Deposit</a>
-  <a href="#"><span>💸</span>Withdraw</a>
-  <a href="#"><span>📊</span>Plans</a>
-  <a href="#"><span>👤</span>Profile</a>
-</div>
+  <div class="balance-wrapper">
+    <div class="balance-card">
+      <span>Total Balance</span>
+      <h2>LKR 0</h2>
+    </div>
+  </div>
+
+  <div class="bottom-nav">
+    <a href="#"><span>💰</span>Deposit</a>
+    <a href="#"><span>💸</span>Withdraw</a>
+    <a href="#"><span>📊</span>Plans</a>
+    <a href="#"><span>👤</span>Profile</a>
+  </div>
+
+</body>
+      </html>
