--- a/dashboard.html
+++ b/dashboard.html
@@ -22,10 +22,10 @@
   </div>
 
   <div class="bottom-nav">
-    <a href="#"><span>💰</span>Deposit</a>
-    <a href="#"><span>💸</span>Withdraw</a>
-    <a href="#"><span>📊</span>Plans</a>
-    <a href="#"><span>👤</span>Profile</a>
+  <a href="deposit.html">💰<br>Deposit</a>
+  <a href="withdraw.html">💸<br>Withdraw</a>
+  <a href="plans.html">📊<br>Plans</a>
+  <a href="profile.html">👤<br>Profile</a>
   </div>
 
 </body>
