--- a/dashboard.html
+++ b/dashboard.html
@@ -2,31 +2,86 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard</title>
-
-  <!-- CSS LINK -->
+  <title>Dashboard | CHUTTA INVESTMENT PLAN</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-  <div class="top-title">
-    <h1>CHUTTA INVESTMENT PLAN</h1>
-    <p>Sri Lanka 🇱🇰</p>
-  </div>
+<!-- TOP TITLE -->
+<div class="top-title">
+  <h1>CHUTTA INVESTMENT PLAN</h1>
+  <p>Sri Lanka 🇱🇰 | Trusted Investment Platform</p>
+</div>
 
-  <div class="balance-wrapper">
-    <div class="balance-card">
-      <span>Total Balance</span>
-      <h2>LKR 0</h2>
-    </div>
+<!-- BALANCE -->
+<div class="balance-wrapper">
+  <div class="balance-card">
+    <span>Total Balance</span>
+    <h2>LKR 0</h2>
   </div>
+</div>
 
-  <div class="bottom-nav">
+<!-- INVESTMENT INFO BOX -->
+<div class="balance-wrapper">
+  <div class="box">
+    <h3 style="text-align:center; color:#38bdf8;">
+      Why Invest With Us?
+    </h3>
+
+    <p style="font-size:14px; line-height:1.6; margin-top:10px;">
+      💎 <b>CHUTTA INVESTMENT PLAN – Sri Lanka 🇱🇰</b>  
+      is built for people who want to earn <b>daily profit</b> through a
+      simple, transparent and easy investment system.
+    </p>
+
+    <p style="font-size:14px; line-height:1.6; margin-top:8px;">
+      ✔ Daily auto profit system (30 days)<br>
+      ✔ Fixed investment plans with clear income<br>
+      ✔ Easy deposit & withdraw process<br>
+      ✔ 100% user-friendly mobile dashboard
+    </p>
+
+    <p style="font-size:14px; line-height:1.6; margin-top:8px;">
+      Start with a small amount, watch your balance grow every day,
+      and upgrade your investment plans step by step 🚀
+    </p>
+
+    <p style="text-align:center; margin-top:12px; font-weight:bold; color:#22c55e;">
+      👉 Choose an investment plan & start earning today!
+    </p>
+  </div>
+</div>
+
+<!-- SUPPORT INFO BOX -->
+<div class="balance-wrapper">
+  <div class="box">
+    <h3 style="text-align:center; color:#facc15;">
+      📞 24/7 Customer Support
+    </h3>
+
+    <p style="font-size:14px; line-height:1.6; margin-top:10px; text-align:center;">
+      Our support team is always ready to help you 💬
+    </p>
+
+    <p style="font-size:14px; line-height:1.8; margin-top:10px; text-align:center;">
+      📱 <b>WhatsApp:</b> +94 0717503915 <br>
+      ✈️ <b>Telegram:</b> @Sasindumadumal
+    </p>
+
+    <p style="font-size:13px; text-align:center; margin-top:8px; color:#94a3b8;">
+      Contact us anytime for deposits, withdrawals or account support
+    </p>
+  </div>
+</div>
+
+<!-- BOTTOM NAVIGATION -->
+<div class="bottom-nav">
   <a href="deposit.html">💰<br>Deposit</a>
   <a href="withdraw.html">💸<br>Withdraw</a>
   <a href="plans.html">📊<br>Plans</a>
   <a href="profile.html">👤<br>Profile</a>
-  </div>
+</div>
 
 </body>
-      </html>
+  </html>
