--- a/dashboard.html
+++ b/dashboard.html
@@ -18,64 +18,33 @@
 <div class="balance-wrapper">
   <div class="balance-card">
     <span>Total Balance</span>
-    <h2>LKR 0</h2>
+    <!-- 🔥 JS මේක update කරන තැන -->
+    <h2 id="balance">LKR 0</h2>
   </div>
 </div>
 
-<!-- INVESTMENT INFO BOX -->
+<!-- INFO -->
 <div class="balance-wrapper">
   <div class="box">
-    <h3 style="text-align:center; color:#38bdf8;">
-      Why Invest With Us?
-    </h3>
-
-    <p style="font-size:14px; line-height:1.6; margin-top:10px;">
-      💎 <b>CHUTTA INVESTMENT PLAN – Sri Lanka 🇱🇰</b>  
-      is built for people who want to earn <b>daily profit</b> through a
-      simple, transparent and easy investment system.
-    </p>
-
-    <p style="font-size:14px; line-height:1.6; margin-top:8px;">
-      ✔ Daily auto profit system (30 days)<br>
-      ✔ Fixed investment plans with clear income<br>
-      ✔ Easy deposit & withdraw process<br>
-      ✔ 100% user-friendly mobile dashboard
-    </p>
-
-    <p style="font-size:14px; line-height:1.6; margin-top:8px;">
-      Start with a small amount, watch your balance grow every day,
-      and upgrade your investment plans step by step 🚀
-    </p>
-
-    <p style="text-align:center; margin-top:12px; font-weight:bold; color:#22c55e;">
-      👉 Choose an investment plan & start earning today!
+    <h3 style="text-align:center; color:#38bdf8;">Why Invest With Us?</h3>
+    <p style="font-size:14px; line-height:1.6;">
+      Earn daily profit with trusted 30-day investment plans.
     </p>
   </div>
 </div>
 
-<!-- SUPPORT INFO BOX -->
+<!-- SUPPORT -->
 <div class="balance-wrapper">
   <div class="box">
-    <h3 style="text-align:center; color:#facc15;">
-      📞 24/7 Customer Support
-    </h3>
-
-    <p style="font-size:14px; line-height:1.6; margin-top:10px; text-align:center;">
-      Our support team is always ready to help you 💬
-    </p>
-
-    <p style="font-size:14px; line-height:1.8; margin-top:10px; text-align:center;">
-      📱 <b>WhatsApp:</b> +94 0717503915 <br>
-      ✈️ <b>Telegram:</b> @Sasindumadumal
-    </p>
-
-    <p style="font-size:13px; text-align:center; margin-top:8px; color:#94a3b8;">
-      Contact us anytime for deposits, withdrawals or account support
+    <h3 style="text-align:center;">📞 24/7 Customer Support</h3>
+    <p style="text-align:center;">
+      WhatsApp: +94 0717503915<br>
+      Telegram: @Sasindumadumal
     </p>
   </div>
 </div>
 
-<!-- BOTTOM NAVIGATION -->
+<!-- BOTTOM NAV -->
 <div class="bottom-nav">
   <a href="deposit.html">💰<br>Deposit</a>
   <a href="withdraw.html">💸<br>Withdraw</a>
@@ -83,10 +52,7 @@
   <a href="profile.html">👤<br>Profile</a>
 </div>
 
-</body>
-  </html>
-<!-- DASHBOARD LOGIC -->
+<!-- 🔥 DASHBOARD JS -->
 <script type="module" src="js/dashboard.js"></script>
-
 </body>
-  </html>
+                                              </html>
