--- a/dashboard.html
+++ b/dashboard.html
@@ -18,33 +18,65 @@
 <div class="balance-wrapper">
   <div class="balance-card">
     <span>Total Balance</span>
-    <!-- 🔥 JS මේක update කරන තැන -->
     <h2 id="balance">LKR 0</h2>
   </div>
 </div>
 
-<!-- INFO -->
+<!-- INVESTMENT INFO -->
 <div class="balance-wrapper">
   <div class="box">
-    <h3 style="text-align:center; color:#38bdf8;">Why Invest With Us?</h3>
-    <p style="font-size:14px; line-height:1.6;">
-      Earn daily profit with trusted 30-day investment plans.
+    <h3 style="text-align:center; color:#38bdf8;">
+      💎 Why Choose CHUTTA INVESTMENT PLAN?
+    </h3>
+
+    <p style="font-size:14px; line-height:1.7; margin-top:12px;">
+      <b>CHUTTA INVESTMENT PLAN – Sri Lanka 🇱🇰</b> is a simple, trusted and
+      user-friendly investment platform built for people who want
+      <b>stable daily income</b> without complicated systems.
+    </p>
+
+    <p style="font-size:14px; line-height:1.7; margin-top:10px;">
+      ✔ Fixed investment plans with clear profit<br>
+      ✔ 30 days automatic earning system<br>
+      ✔ Easy deposit & fast withdrawal process<br>
+      ✔ 100% mobile-friendly dashboard
+    </p>
+
+    <p style="font-size:14px; line-height:1.7; margin-top:10px;">
+      Start with a small investment, watch your balance grow day by day,
+      and upgrade your plans anytime 🚀  
+      Your earnings are calculated transparently — no hidden charges.
+    </p>
+
+    <p style="text-align:center; margin-top:14px; font-weight:bold; color:#22c55e;">
+      👉 Choose a plan today & start earning smart!
     </p>
   </div>
 </div>
 
-<!-- SUPPORT -->
+<!-- SUPPORT INFO -->
 <div class="balance-wrapper">
   <div class="box">
-    <h3 style="text-align:center;">📞 24/7 Customer Support</h3>
-    <p style="text-align:center;">
-      WhatsApp: +94 0717503915<br>
-      Telegram: @Sasindumadumal
+    <h3 style="text-align:center; color:#facc15;">
+      📞 24/7 Customer Support
+    </h3>
+
+    <p style="font-size:14px; line-height:1.6; margin-top:10px; text-align:center;">
+      Our support team is always ready to help you 💬
+    </p>
+
+    <p style="font-size:14px; line-height:1.8; margin-top:10px; text-align:center;">
+      📱 <b>WhatsApp:</b> +94 0717503915 <br>
+      ✈️ <b>Telegram:</b> @Sasindumadumal
+    </p>
+
+    <p style="font-size:13px; text-align:center; margin-top:8px; color:#94a3b8;">
+      Trusted service • Fast response • Secure system
     </p>
   </div>
 </div>
 
-<!-- BOTTOM NAV -->
+<!-- BOTTOM NAVIGATION -->
 <div class="bottom-nav">
   <a href="deposit.html">💰<br>Deposit</a>
   <a href="withdraw.html">💸<br>Withdraw</a>
@@ -52,7 +84,8 @@
   <a href="profile.html">👤<br>Profile</a>
 </div>
 
-<!-- 🔥 DASHBOARD JS -->
+<!-- DASHBOARD JS -->
 <script type="module" src="js/dashboard.js"></script>
+
 </body>
-                                              </html>
+  </html>
