--- a/plans.html
+++ b/plans.html
@@ -14,49 +14,53 @@
     Choose a plan & earn daily profit for 30 days
   </p>
 
-  <!-- PLAN TEMPLATE -->
+  <!-- PLAN 1 -->
   <div class="box plan" data-plan="PLAN_1000">
     <h3>💠 Starter Plan</h3>
     <p>💰 Price: <b>LKR 1,000</b></p>
     <p>⏳ Validity: 30 Days</p>
     <p>📈 Total Return: <b>LKR 3,000</b></p>
-    <p class="small status" id="PLAN_1000"></p>
+    <p class="small status" id="status-PLAN_1000"></p>
     <button onclick="buyPlan('PLAN_1000',1000,3000)">Buy Now</button>
   </div>
 
+  <!-- PLAN 2 -->
   <div class="box plan" data-plan="PLAN_3000">
     <h3>🥉 Bronze Plan</h3>
     <p>💰 Price: <b>LKR 3,000</b></p>
     <p>⏳ Validity: 30 Days</p>
     <p>📈 Total Return: <b>LKR 9,000</b></p>
-    <p class="small status" id="PLAN_3000"></p>
+    <p class="small status" id="status-PLAN_3000"></p>
     <button onclick="buyPlan('PLAN_3000',3000,9000)">Buy Now</button>
   </div>
 
+  <!-- PLAN 3 -->
   <div class="box plan" data-plan="PLAN_5000">
     <h3>🥈 Silver Plan</h3>
     <p>💰 Price: <b>LKR 5,000</b></p>
     <p>⏳ Validity: 30 Days</p>
     <p>📈 Total Return: <b>LKR 15,000</b></p>
-    <p class="small status" id="PLAN_5000"></p>
+    <p class="small status" id="status-PLAN_5000"></p>
     <button onclick="buyPlan('PLAN_5000',5000,15000)">Buy Now</button>
   </div>
 
+  <!-- PLAN 4 -->
   <div class="box plan" data-plan="PLAN_10000">
     <h3>🥇 Gold Plan</h3>
     <p>💰 Price: <b>LKR 10,000</b></p>
     <p>⏳ Validity: 30 Days</p>
     <p>📈 Total Return: <b>LKR 36,000</b></p>
-    <p class="small status" id="PLAN_10000"></p>
+    <p class="small status" id="status-PLAN_10000"></p>
     <button onclick="buyPlan('PLAN_10000',10000,36000)">Buy Now</button>
   </div>
 
+  <!-- PLAN 5 -->
   <div class="box plan" data-plan="PLAN_30000">
     <h3>💎 Platinum Plan</h3>
     <p>💰 Price: <b>LKR 30,000</b></p>
     <p>⏳ Validity: 30 Days</p>
     <p>📈 Total Return: <b>LKR 105,000</b></p>
-    <p class="small status" id="PLAN_30000"></p>
+    <p class="small status" id="status-PLAN_30000"></p>
     <button onclick="buyPlan('PLAN_30000',30000,105000)">Buy Now</button>
   </div>
 </div>
