--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,49 @@
-<h2>Profile</h2>
-<div id="info"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Profile</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<div class="container">
+
+  <h2 style="text-align:center;">👤 My Profile</h2>
+
+  <div class="box" style="text-align:center;">
+    <img src="https://i.imgur.com/8Km9tLL.png" 
+         style="width:80px;border-radius:50%;margin-bottom:10px;">
+
+    <h3 id="userEmail">Loading...</h3>
+    <p class="small">User ID</p>
+    <p class="small" id="userUID">---</p>
+  </div>
+
+  <div class="box">
+    <h3>💰 Account Balance</h3>
+    <p style="font-size:20px;">
+      LKR <b id="userBalance">0</b>
+    </p>
+  </div>
+
+  <div class="box">
+    <button onclick="logout()" style="width:100%;background:#ff3b3b;">
+      🚪 Logout
+    </button>
+  </div>
+
+</div>
+
+<!-- Bottom Navigation -->
+<div class="bottom-nav">
+  <a href="dashboard.html">🏠<br>Home</a>
+  <a href="deposit.html">💰<br>Deposit</a>
+  <a href="withdraw.html">💸<br>Withdraw</a>
+  <a href="profile.html" class="active">👤<br>Profile</a>
+</div>
 
 <script type="module" src="js/profile.js"></script>
+</body>
+</html>
