--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Profile</title>
+  <title>My Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -10,33 +10,38 @@
 
 <div class="container">
 
-  <h2 style="text-align:center;">👤 My Profile</h2>
+  <h2 style="text-align:center;">🚀 My Profile</h2>
 
+  <!-- PROFILE CARD -->
   <div class="box" style="text-align:center;">
-    <img src="https://i.imgur.com/8Km9tLL.png" 
-         style="width:80px;border-radius:50%;margin-bottom:10px;">
+    <img 
+      src="https://cdn-icons-png.flaticon.com/512/3212/3212608.png"
+      alt="Rocket"
+      style="width:90px;height:90px;border-radius:50%;margin-bottom:10px;"
+    >
 
-    <h3 id="userEmail">Loading...</h3>
-    <p class="small">User ID</p>
-    <p class="small" id="userUID">---</p>
+    <p class="small">Logged in as</p>
+    <h3 id="userEmail">loading...</h3>
   </div>
 
+  <!-- BALANCE -->
   <div class="box">
     <h3>💰 Account Balance</h3>
-    <p style="font-size:20px;">
+    <p style="font-size:22px;margin-top:5px;">
       LKR <b id="userBalance">0</b>
     </p>
   </div>
 
+  <!-- LOGOUT -->
   <div class="box">
-    <button onclick="logout()" style="width:100%;background:#ff3b3b;">
+    <button onclick="logout()" style="width:100%;background:#ef4444;">
       🚪 Logout
     </button>
   </div>
 
 </div>
 
-<!-- Bottom Navigation -->
+<!-- Bottom Nav -->
 <div class="bottom-nav">
   <a href="dashboard.html">🏠<br>Home</a>
   <a href="deposit.html">💰<br>Deposit</a>
