--- a/profile.html
+++ b/profile.html
@@ -14,34 +14,29 @@
 
   <!-- PROFILE CARD -->
   <div class="box" style="text-align:center;">
-    <img 
+    <img
       src="https://cdn-icons-png.flaticon.com/512/3212/3212608.png"
       alt="Rocket"
-      style="width:90px;height:90px;border-radius:50%;margin-bottom:10px;"
+      style="width:90px;height:90px;border-radius:50%;margin-bottom:12px;"
     >
 
-    <p class="small">Logged in as</p>
-    <h3 id="userEmail">loading...</h3>
-  </div>
-
-  <!-- BALANCE -->
-  <div class="box">
-    <h3>💰 Account Balance</h3>
-    <p style="font-size:22px;margin-top:5px;">
-      LKR <b id="userBalance">0</b>
-    </p>
+    <p class="small">Registered Email</p>
+    <h3 id="userEmail"></h3>
   </div>
 
   <!-- LOGOUT -->
   <div class="box">
-    <button onclick="logout()" style="width:100%;background:#ef4444;">
+    <button
+      onclick="logout()"
+      style="width:100%;background:#ef4444;"
+    >
       🚪 Logout
     </button>
   </div>
 
 </div>
 
-<!-- Bottom Nav -->
+<!-- Bottom Navigation -->
 <div class="bottom-nav">
   <a href="dashboard.html">🏠<br>Home</a>
   <a href="deposit.html">💰<br>Deposit</a>
